solve probleme register
