# banking-ui/src/app/openAPI/swagger.json
@@ -905,9 +905,14 @@
             "type": "string",
             "maxLength": 16,
             "minLength": 8
+          },
+          "confirmPassword": {
+            "type": "string",
+            "minLength": 1
           }
         },
         "required": [
+          "confirmPassword",
           "email",
           "firstName",
           "lastName",
@@ -1036,12 +1041,12 @@
       "TransactionSumDetails": {
         "type": "object",
         "properties": {
+          "amount": {
+            "type": "number"
+          },
           "transactionDate": {
             "type": "string",
             "format": "date"
-          },
-          "amount": {
-            "type": "number"
           }
         }
       }
