# banking-ui/src/app/services/models/user-dto.ts
@@ -2,6 +2,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface UserDto {
+  confirmPassword: string;
   email: string;
   firstName: string;
   id?: number;
